[package]
name = "serde_ub_json"
version = "0.1.0"
license = "MIT"
description = "UBJSON (Universal Binary JSON) serialization file format"
repository = "https://github.com/x2bool/serde_ub_json"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "bench_main"
harness = false
